--- a/map_designs/C_D_combined.html
+++ b/map_designs/C_D_combined.html
@@ -1211,20 +1211,38 @@
             activeFilterDropdown = null;
         }
 
-        // Borough zoom coordinates
-        const boroughCoords = {
-            'Manhattan': { center: [40.7831, -73.9712], zoom: 13 },
-            'Brooklyn': { center: [40.6501, -73.9496], zoom: 12 },
-            'Queens': { center: [40.7282, -73.7949], zoom: 12 },
-            'Bronx': { center: [40.8448, -73.8648], zoom: 12 },
-            'Staten Island': { center: [40.5795, -74.1502], zoom: 12 },
-            'All': { center: [40.735, -73.99], zoom: 13 }
+        // Borough bounds - automatically fit all mics in view
+        const boroughBounds = {
+            'Manhattan': [
+                [40.6851, -74.0349],
+                [40.9462, -73.7743]
+            ],
+            'Brooklyn': [
+                [40.6512, -74.0076],
+                [40.7321, -73.8943]
+            ],
+            'Queens': [
+                [40.6915, -73.9371],
+                [40.7865, -73.9006]
+            ],
+            'Bronx': [
+                [40.8068, -73.9267],
+                [40.8068, -73.9267]
+            ],
+            'Staten Island': [
+                [40.5250, -74.2500],
+                [40.6000, -74.0500]
+            ],
+            'All': [
+                [40.6350, -74.0249],
+                [40.9416, -73.7844]
+            ]
         };
 
         function zoomToBorough(borough) {
-            const coords = boroughCoords[borough];
-            if (coords) {
-                map.flyTo(coords.center, coords.zoom, { duration: 0.8 });
+            const bounds = boroughBounds[borough];
+            if (bounds) {
+                map.fitBounds(bounds, { padding: [50, 50], duration: 0.8 });
             }
         }
 
