Update modal day/time picker UI and API deps

--- a/map_designs/newest_map/index.html
+++ b/map_designs/newest_map/index.html
@@ -255,6 +255,16 @@
                     <span class="maps-arrow">→</span>
                 </a>
 
+                <div class="modal-notice" id="modal-no-mics-notice"></div>
+
+                <div class="modal-daytime-picker" id="modal-daytime-picker">
+                    <div class="modal-picker-label">Day</div>
+                    <div class="modal-chip-row modal-day-row" id="modal-day-row"></div>
+                    <div class="modal-picker-label">Time</div>
+                    <div class="modal-chip-row modal-time-row" id="modal-time-row"></div>
+                    <div class="modal-chip-row modal-time-more-row" id="modal-time-more-row"></div>
+                </div>
+
                 <div class="info-row" id="modal-info-row"></div>
                 <p class="note-text" id="modal-instructions">Sign up in person</p>
 
